[project]
name = "lpdp-rf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.34.2",
    "sastrawi>=1.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
]
