[project]
name = "lpdp-rf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "fastapi>=0.139.2",
    "joblib>=1.5.3",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.34.2",
    "sastrawi>=1.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
    "wordcloud>=1.9.6",
]
